Updated favicon and fixed cursor while hovering projects scrollbar

--- a/src/styles/components/_project-slider.scss
+++ b/src/styles/components/_project-slider.scss
@@ -15,6 +15,8 @@
   position: absolute;
   left: 17px;
 
+  &:hover { cursor: pointer; }
+
   #separator {
     position: absolute;
     width: 2px;
